EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==08/06/2009==
WildcardX: *BOTS* Significantly modified the bots table. Removed several unnecessary columns and changed  many interger columns to accept signed values. Added new columns to track dates and times for bots.
WildcardX: *BOTS* Slowed bot runspeed to a more reasonable default value.

Optional SQL: *BOTS* utils/sql/svn/892_optional_bots_table_mod.sql

==08/05/2009==
WildcardX: Fixed a bug that prevented COMBAT_EVENT signaling to NPC's from working correctly.
WildcardX: Bots will now call the database a lot less regarding their inventory. They can get info about their inventory from memory during runtime.
WildcardX: Bots appearance like face, hair, etc is now persisted to the database and used during runtime.
WildcardX: (Taurinus) Tweaked the way bots calculate their AA's so the code isn't as long and is easier to read.
WildcardX: A bot getting aggro will aggro its group members for them to come to the bots defense.
gaeorn: added utils/sql/svn/botsconvert.sql to convert old schema bots and inventory to new schema. if you need to convert old bots, use this instead of bots.sql.

==08/04/2009==
WildcardX: Fixed a bug that broke cash handins with NPC's.
WildcardX: Fixed a bug that reversed a riposte attack's target.
WildcardX: Merged the "bots" branch into trunk and removed the prior "EQBOTS" system from trunk. Please carefully evaluate this version before making any decision to upgrade your servers.
Trevius: Added a Distance option for quest::follow(entity_id, distance) to allow setting the distance for the NPC to follow at.

==08/02/2009==
realityincarnate: SoF - Added opcode values to avoid packet dumps of some of the more annoying unknowns
realityincarnate: SoF - Tradeskill success messages now display the recipe name instead of %1
realityincarnate: Added #myskills command to bring up an SoF-style skills window showing current and capped skill levels