@@ -3,8 +3,12 @@ EQEMu Changelog (Started on Sept 24, 2003 15:50)
 ==08/06/2009==
 WildcardX: *BOTS* Significantly modified the bots table. Removed several unnecessary columns and changed  many interger columns to accept signed values. Added new columns to track dates and times for bots.
 WildcardX: *BOTS* Slowed bot runspeed to a more reasonable default value.
+WildcardX: *BOTS* Bots will now depop instead of being murdered to go away.
+WildcardX: Only a Client object will try to update its group id in the database when a group member is removed from the group.
+WildcardX: *BOTS* Bots will now record their total play time.
 
 Optional SQL: *BOTS* utils/sql/svn/892_optional_bots_table_mod.sql
+Optional SQL: *BOTS* utils/sql/svn/893_optional_bots_table_mod.sql
 
 ==08/05/2009==
 WildcardX: Fixed a bug that prevented COMBAT_EVENT signaling to NPC's from working correctly.
